--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,7 @@
-include.path=${php.global.include.path}
+file.reference._r_d_a-magento_1901=../../../\u0179r\u00f3d\u0142a/magento_1901
+include.path=\
+    ${php.global.include.path}:\
+    ${file.reference._r_d_a-magento_1901}
 php.version=PHP_54
 source.encoding=UTF-8
 src.dir=.
